--- a/src/style.css
+++ b/src/style.css
@@ -55,3 +55,47 @@ header input {
 .text-field__aicon:hover {
   color: red;
 }
+
+.sidenav {
+  height: 100%;
+  width: 20vw;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+  background-color: #262626;
+}
+
+.sidenav a,
+.dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+
+.sidenav a:hover,
+.dropdown-btn:hover {
+  color: rgb(241, 90, 90);
+  transition: color 0.35s ease-in-out;
+}
+
+.main {
+  margin-left: 200px;
+  font-size: 20px;
+  padding: 0px 10px;
+}
+
+.dropdown-container {
+  display: none;
+  padding-left: 8px;
+}
