--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body {
   height: 100vh;
   width: 100%;
   margin: 0px;
+  background-color: #9898988a;
 }
 
 header {
@@ -56,9 +57,15 @@ header input {
   color: red;
 }
 
-.sidenav {
+.sidebarAndCards {
   height: 100%;
-  width: 20vw;
+  width: 100vw;
+  display: flex;
+}
+
+.sidenav {
+  width: 25%;
+  height: 100%;
   z-index: 1;
   top: 0;
   left: 0;
@@ -98,4 +105,42 @@ header input {
 .dropdown-container {
   display: none;
   padding-left: 8px;
+}
+
+.containerCards {
+  display: flex;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row;
+  height: 100%;
+}
+
+.card {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  margin: 35px;
+  padding: 20px;
+  width: 18vw;
+  height: 35vh;
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 2px 10px rgba(237, 81, 81, 0.396);
+}
+
+.card h2 {
+  margin: 0 0 10px 0;
+  color: #333;
+  font-size: 1vh;
+  font-size: 1vw;
+}
+
+.card p {
+  margin: 5px 0;
+  color: #555;
+  font-size: 1vh;
+  font-size: 1vw;
 }
