--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,14 @@ header input {
   justify-content: center;
 }
 
+.icon_button {
+  border: medium none;
+  background-image: none;
+  background: transparent;
+  float: left;
+  background-color: transparent;
+}
+
 .name {
   padding-left: 20px;
 }
@@ -64,7 +72,8 @@ header input {
 }
 
 .sidenav {
-  width: 25%;
+  max-width: 20vw;
+  width: 100%;
   height: 100%;
   z-index: 1;
   top: 0;
@@ -122,7 +131,7 @@ header input {
   margin: 35px;
   padding: 20px;
   width: 18vw;
-  height: 35vh;
+  height: 38vh;
   transition: transform 0.3s;
 }
 
@@ -132,10 +141,15 @@ header input {
 }
 
 .card h2 {
-  margin: 0 0 10px 0;
+  display: flex;
+  align-items: center;
   color: #333;
   font-size: 1vh;
   font-size: 1vw;
+}
+
+.name {
+  margin-right: 10px;
 }
 
 .card p {
