--- a/src/style.css
+++ b/src/style.css
@@ -105,6 +105,12 @@ header input {
   transition: color 0.35s ease-in-out;
 }
 
+.coincidences {
+  color: #6c6767;
+  font-size: 5vh;
+  display: none;
+}
+
 .main {
   margin-left: 200px;
   font-size: 20px;
