--- a/src/style.css
+++ b/src/style.css
@@ -137,7 +137,7 @@ header input {
   margin: 35px;
   padding: 20px;
   width: 18vw;
-  height: 38vh;
+  height: 23vh;
   transition: transform 0.3s;
 }
 
@@ -150,8 +150,8 @@ header input {
   display: flex;
   align-items: center;
   color: #333;
-  font-size: 1vh;
-  font-size: 1vw;
+  font-size: 1.25vh;
+  font-size: 1.25vw;
 }
 
 .name {
@@ -161,6 +161,41 @@ header input {
 .card p {
   margin: 5px 0;
   color: #555;
-  font-size: 1vh;
-  font-size: 1vw;
+  font-size: 1.25vh;
+  font-size: 1.25vw;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.809);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px; /* Максимальная ширина окна */
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
 }
