--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,12 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: fixed;
+  width: 100vw;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
 }
 
 header input {
@@ -69,16 +75,17 @@ header input {
   height: 100%;
   width: 100vw;
   display: flex;
+  margin-top: 10vh;
 }
 
 .sidenav {
-  max-width: 20vw;
-  width: 100%;
-  height: 100%;
+  margin-top: 10vh;
+  width: 20vw;
+  height: 100vh;
+  position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
   background-color: #262626;
@@ -128,6 +135,8 @@ header input {
   flex-wrap: wrap;
   flex-direction: row;
   height: 100%;
+  width: 80vw;
+  margin-left: 20vw;
 }
 
 .card {
@@ -137,7 +146,7 @@ header input {
   margin: 35px;
   padding: 20px;
   width: 18vw;
-  height: 23vh;
+  height: 27vh;
   transition: transform 0.3s;
 }
 
@@ -183,7 +192,8 @@ header input {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  max-width: 600px; /* Максимальная ширина окна */
+  max-width: 600px;
+  border-radius: 7px;
 }
 
 .close {
@@ -198,4 +208,14 @@ header input {
   color: red;
   text-decoration: none;
   cursor: pointer;
+}
+
+ul {
+  list-style-type: none; /* Убираем маркеры списка */
+  margin: 0;
+  padding-left: 20px; /* Отступ для отображения уровней дерева */
+}
+
+li {
+  margin: 5px 0;
 }
