--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -35,7 +35,7 @@ header {
     background-color: transparent;
   }
   
-  .name {
+  .nameLogo {
     padding-left: 20px;
     margin-right: 10px;
     font-size: 3vh;
